# marimo_node_embeddings

./: .gitignore  README.md  app.py  export_wasm.sh  precompute_embeddings.py  pyproject.toml  run.sh  sweep_gnn.py  sweep_n2v.py  sweep_n2v_lesmis.py
.github/workflows/: deploy.yml
data/: gnn_graphsage.npy  gnn_supervised.npz  karate_gnn_supervised.npz  karate_node2vec_balanced_umap.npy  karate_node2vec_bfs.npy  karate_node2vec_dfs.npy  karate_node2vec_dfs_umap.npy  karate_node2vec_p1_q4.npy  lesmis_gnn_supervised.npz  lesmis_node2vec_balanced.npy  lesmis_node2vec_balanced_umap.npy  lesmis_node2vec_bfs.npy  lesmis_node2vec_bfs_umap.npy  lesmis_node2vec_dfs.npy  lesmis_node2vec_dfs_umap.npy  node2vec_balanced.npy  node2vec_bfs.npy  node2vec_bfs_umap.npy  node2vec_dfs.npy  node2vec_dfs_umap.npy  node2vec_p1_q1.npy  node2vec_p1_q4.npy  node_names.csv
data/n2v_explore/: balanced.npy  bfs.npy
public/: gnn_graphsage_supervised.npz  gnn_supervised.npz  karate_gnn_supervised.npz  karate_node2vec_balanced.npy  karate_node2vec_bfs.npy  karate_node2vec_bfs_umap.npy  karate_node2vec_dfs.npy  karate_node2vec_p1_q0.25.npy  karate_node2vec_p1_q1.npy  les_miserables.graphml  lesmis_gnn_supervised.npz  lesmis_node2vec_balanced.npy  lesmis_node2vec_bfs.npy  lesmis_node2vec_dfs.npy  node2vec_balanced.npy  node2vec_balanced_umap.npy  node2vec_bfs.npy  node2vec_dfs.npy  node2vec_p1_q0.25.npy
