[project]
name = "marimo-node-embeddings"
version = "0.1.0"
description = "Interactive marimo companion app for node embeddings (spectral, node2vec, GraphSAGE) and node classification on the US college football and Zachary karate networks."
requires-python = ">=3.13"
dependencies = [
    "marimo>=0.23.6",
    "matplotlib>=3.10.9",
    "numpy>=2.4.4",
    "pandas>=3.0.3",
    "python-igraph>=0.11",
    "scikit-learn>=1.8.0",
]
